--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,5 +31,5 @@ jobs:
       run: |
         echo "✅ Running tests..."
         # Uncomment and customize if you have tests
-        python backend.main.py test
+        python backend/main.py test
 
