--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,14 +26,14 @@ jobs:
         python -m pip install --upgrade pip
         pip install awsebcli
 
-    # Step 4: Configure AWS credentials
+    # Step 4: Configure AWS credentials (fixed key)
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v2
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
-        region: us-east-1
+        aws-region: us-east-1  # ✅ fixed here
 
     # Step 5: Deploy to Elastic Beanstalk
     - name: Deploy to Elastic Beanstalk
